// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirewallRuleList List data when user has operator role Renders the component 1`] = `
<fragment-stub>
  <div class="mt-2 v-card v-sheet theme--light">
    <div class="v-data-table v-data-table--has-bottom theme--light" data-test="firewallRuleList-dataTable">
      <div class="v-data-table__wrapper">
        <table>
          <colgroup>
            <col class="">
            <col class="">
            <col class="">
            <col class="">
            <col class="">
            <col class="">
            <col class="">
          </colgroup>
          <thead class="v-data-table-header">
            <tr>
              <th role="columnheader" scope="col" aria-label="Active" class="text-center"><span>Active</span></th>
              <th role="columnheader" scope="col" aria-label="Priority" class="text-center"><span>Priority</span></th>
              <th role="columnheader" scope="col" aria-label="Action" class="text-center"><span>Action</span></th>
              <th role="columnheader" scope="col" aria-label="Source IP" class="text-center"><span>Source IP</span></th>
              <th role="columnheader" scope="col" aria-label="Username" class="text-center"><span>Username</span></th>
              <th role="columnheader" scope="col" aria-label="Filter" class="text-center"><span>Filter</span></th>
              <th role="columnheader" scope="col" aria-label="Actions" class="text-center"><span>Actions</span></th>
            </tr>
          </thead>
          <tbody>
            <tr class="">
              <td class="text-center"><i aria-hidden="true" class="v-icon notranslate material-icons theme--light success--text">check_circle</i></td>
              <td class="text-center">
                4
              </td>
              <td class="text-center">
                Allow
              </td>
              <td class="text-center">
                00.00.00
              </td>
              <td class="text-center">
                shellhub
              </td>
              <td class="text-center">
                <div>
                  shellhub
                </div>
              </td>
              <td class="text-center"><span class="v-chip v-chip--clickable theme--light v-size--default transparent"><span class="v-chip__content"><button type="button" role="button" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate icons v-icon--link mdi mdi-dots-horizontal theme--light" style="font-size: 16px;"></button></span></span>
                <div class="v-menu">
                  <!---->
                </div>
              </td>
            </tr>
            <tr class="">
              <td class="text-center"><i aria-hidden="true" bottom="" class="v-icon notranslate material-icons theme--light">check_circle</i></td>
              <td class="text-center">
                3
              </td>
              <td class="text-center">
                Allow
              </td>
              <td class="text-center">
                00.00.00
              </td>
              <td class="text-center">
                shellhub
              </td>
              <td class="text-center">
                <div><span class="ml-1 mb-1 v-chip v-chip--no-color v-chip--outlined theme--light v-size--small" aria-haspopup="true" aria-expanded="false"><span class="v-chip__content">
                tag1
              </span></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span class="ml-1 mb-1 v-chip v-chip--no-color v-chip--outlined theme--light v-size--small" aria-haspopup="true" aria-expanded="false"><span class="v-chip__content">
                tag2
              </span></span></div>
              </td>
              <td class="text-center"><span class="v-chip v-chip--clickable theme--light v-size--default transparent"><span class="v-chip__content"><button type="button" role="button" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate icons v-icon--link mdi mdi-dots-horizontal theme--light" style="font-size: 16px;"></button></span></span>
                <div class="v-menu">
                  <!---->
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div class="v-data-footer">
        <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
            <div class="v-input__control">
              <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-205" class="v-input__slot">
                <div class="v-select__slot">
                  <div class="v-select__selections">
                    <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-205" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                  </div>
                  <div class="v-input__append-inner">
                    <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                  </div><input type="hidden" value="10">
                </div>
                <div class="v-menu">
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="v-data-footer__pagination">1-2 of 2</div>
        <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
        <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
      </div>
    </div>
  </div>
</fragment-stub>
`;

exports[`FirewallRuleList List data when user has owner role Renders the component 1`] = `
<fragment-stub>
  <div class="mt-2 v-card v-sheet theme--light">
    <div class="v-data-table v-data-table--has-bottom theme--light" data-test="firewallRuleList-dataTable">
      <div class="v-data-table__wrapper">
        <table>
          <colgroup>
            <col class="">
            <col class="">
            <col class="">
            <col class="">
            <col class="">
            <col class="">
            <col class="">
          </colgroup>
          <thead class="v-data-table-header">
            <tr>
              <th role="columnheader" scope="col" aria-label="Active" class="text-center"><span>Active</span></th>
              <th role="columnheader" scope="col" aria-label="Priority" class="text-center"><span>Priority</span></th>
              <th role="columnheader" scope="col" aria-label="Action" class="text-center"><span>Action</span></th>
              <th role="columnheader" scope="col" aria-label="Source IP" class="text-center"><span>Source IP</span></th>
              <th role="columnheader" scope="col" aria-label="Username" class="text-center"><span>Username</span></th>
              <th role="columnheader" scope="col" aria-label="Filter" class="text-center"><span>Filter</span></th>
              <th role="columnheader" scope="col" aria-label="Actions" class="text-center"><span>Actions</span></th>
            </tr>
          </thead>
          <tbody>
            <tr class="">
              <td class="text-center"><i aria-hidden="true" class="v-icon notranslate material-icons theme--light success--text">check_circle</i></td>
              <td class="text-center">
                4
              </td>
              <td class="text-center">
                Allow
              </td>
              <td class="text-center">
                00.00.00
              </td>
              <td class="text-center">
                shellhub
              </td>
              <td class="text-center">
                <div>
                  shellhub
                </div>
              </td>
              <td class="text-center"><span class="v-chip v-chip--clickable theme--light v-size--default transparent"><span class="v-chip__content"><button type="button" role="button" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate icons v-icon--link mdi mdi-dots-horizontal theme--light" style="font-size: 16px;"></button></span></span>
                <div class="v-menu">
                  <!---->
                </div>
              </td>
            </tr>
            <tr class="">
              <td class="text-center"><i aria-hidden="true" bottom="" class="v-icon notranslate material-icons theme--light">check_circle</i></td>
              <td class="text-center">
                3
              </td>
              <td class="text-center">
                Allow
              </td>
              <td class="text-center">
                00.00.00
              </td>
              <td class="text-center">
                shellhub
              </td>
              <td class="text-center">
                <div><span class="ml-1 mb-1 v-chip v-chip--no-color v-chip--outlined theme--light v-size--small" aria-haspopup="true" aria-expanded="false"><span class="v-chip__content">
                tag1
              </span></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span class="ml-1 mb-1 v-chip v-chip--no-color v-chip--outlined theme--light v-size--small" aria-haspopup="true" aria-expanded="false"><span class="v-chip__content">
                tag2
              </span></span></div>
              </td>
              <td class="text-center"><span class="v-chip v-chip--clickable theme--light v-size--default transparent"><span class="v-chip__content"><button type="button" role="button" aria-haspopup="true" aria-expanded="false" class="v-icon notranslate icons v-icon--link mdi mdi-dots-horizontal theme--light" style="font-size: 16px;"></button></span></span>
                <div class="v-menu">
                  <!---->
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div class="v-data-footer">
        <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
            <div class="v-input__control">
              <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-55" class="v-input__slot">
                <div class="v-select__slot">
                  <div class="v-select__selections">
                    <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-55" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
                  </div>
                  <div class="v-input__append-inner">
                    <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
                  </div><input type="hidden" value="10">
                </div>
                <div class="v-menu">
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="v-data-footer__pagination">1-2 of 2</div>
        <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
        <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
      </div>
    </div>
  </div>
</fragment-stub>
`;
